manifest/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:latest
          ports:
            - containerPort: 5678
          args:
            - "-text=hello, world"
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: echo
