manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  defaultBackend:
    service:
      name: echo-service
      port:
        number: 80
